# osimperf2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  analysis.toml  broken-commits.txt  full_analysis_errors.csv  full_analysis_results.csv  osimperf2  osimperf2-runner.cpp  requirements.txt  setup_ubuntu24.sh  ubuntu24_apt-dependencies.txt
benchmarks/Arm26/: runBenchmark  runGrind
benchmarks/Arm26CMC/: arm26.osim
benchmarks/Arm26FWD/: arm26.osim  benchmark_config.toml  runBenchmark  runGrind
benchmarks/Arm26FWD_Scholz/: arm26_both.osim  arm26_scholz.osim  benchmark_config.toml
benchmarks/RajagopalContact/: RajagopalContact.osim  RajagopalContactTweaked.osim  benchmark_config.toml  runBenchmark
benchmarks/RajagopalContactUndamped/: RajagopalContact.osim  runBenchmark
benchmarks/RajagopalDrop/: Rajagopal2016.osim  benchmark_config.toml  runBenchmark  runGrind
benchmarks/RajagopalDropUndamped/: Rajagopal2016.osim  runBenchmark
benchmarks/Shoulder/: TestShoulderWrapping.osim  benchmark_config.toml  forwardTool.xml  runBenchmark
